[package]
name = "db-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.20.0", features=["full"]}
sqlx = {version = "0.6", features =["runtime-tokio-rustls", "postgres"]}
axum = {version = "0.5.13", features = ["json"]}
serde_json = "1.0.82"
serde = "1.0.139"